; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_rdp_send_fonts.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/dos/extr_8469.c_rdp_send_fonts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RDP_DATA_PDU_FONT2 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @rdp_send_fonts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rdp_send_fonts(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = call i32 @rdp_init_data(i32 8)
  store i32 %4, i32* %3, align 4
  %5 = load i32, i32* %3, align 4
  %6 = call i32 @out_uint16(i32 %5, i32 0)
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @out_uint16_le(i32 %7, i32 62)
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @out_uint16_le(i32 %9, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = call i32 @out_uint16_le(i32 %12, i32 50)
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @s_mark_end(i32 %14)
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @RDP_DATA_PDU_FONT2, align 4
  %18 = call i32 @rdp_send_data(i32 %16, i32 %17)
  ret void
}

declare dso_local i32 @rdp_init_data(i32) #1

declare dso_local i32 @out_uint16(i32, i32) #1

declare dso_local i32 @out_uint16_le(i32, i32) #1

declare dso_local i32 @s_mark_end(i32) #1

declare dso_local i32 @rdp_send_data(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
